--- a/CleanMovie/CleanMovie.API/appsettings.json
+++ b/CleanMovie/CleanMovie.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MoviesConnectionString": "Server=(localdb)\\mssqllocaldb; Database=CleanMovieDB; Trusted_Connection=True;"
+  }
 }
