Add Dependency injection for infrastructure

--- a/CleanMovie/CleanMovie.API/appsettings.json
+++ b/CleanMovie/CleanMovie.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MoviesConnectionString": "Server=(localdb)\\mssqllocaldb; Database=CleanMovieDB; Trusted_Connection=True;"
+    "MoviesConnectionString": ""
   }
 }
