--- a/CleanMovie/CleanMovie.API/appsettings.Development.json
+++ b/CleanMovie/CleanMovie.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MoviesConnectionString": "Server=(localdb)\\mssqllocaldb; Database=CleanMovieDB; Trusted_Connection=True;"
   }
 }
