add jwt authentication to movies api

--- a/CleanMovie/CleanMovie.API/appsettings.Development.json
+++ b/CleanMovie/CleanMovie.API/appsettings.Development.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MoviesConnectionString": "Server=(localdb)\\mssqllocaldb; Database=CleanMovieDB; Trusted_Connection=True;"
+  },
+  "JWT": {
+    "Key": "CleanKEY85349573487548975349759#$%$#&#$%&#$/%BETRYERYU",
+    "Issuer": "ovector68o",
+    "Audience": "cleanmovie.com"
   }
 }
