--- a/CleanMovie/Authentication.API/Properties/launchSettings.json
+++ b/CleanMovie/Authentication.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Authentication.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7277;http://localhost:5232",
       "environmentVariables": {
