--- a/CleanMovie/CleanMovie.API/Properties/launchSettings.json
+++ b/CleanMovie/CleanMovie.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "CleanMovie.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7162;http://localhost:5012",
       "environmentVariables": {
