--- a/CleanMovie/CleanMovie.API/appsettings.json
+++ b/CleanMovie/CleanMovie.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MoviesConnectionString": ""
+  },
+  "JWT": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
   }
 }
